# fs-indexer-opensearch

./: .gitignore  API_top_level.json  README.md  build_app.py  fs-indexer.spec  prompts.txt  pyproject.toml  requirements.txt
config/: indexer-config.yaml
fs_indexer/: checksum_worker.py  config.py  db_duckdb.py  db_optimizations.py  indexer-config.yaml  lucidlink_api.py  main.py  run_checksum_worker.py  schema.py  utils.py
fs_indexer_opensearch/: db_duckdb.py  db_optimizations.py  lucidlink_api.py  main.py  opensearch_integration.py
