[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fs-indexer"
version = "0.1.0"
authors = [
  { name="David Phillips" },
]
description = "High-performance file system indexer with DuckDB backend and async I/O"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.9.1",
    "duckdb>=0.9.2",
    "xxhash>=3.4.1",
    "pyyaml>=6.0.1",
    "opensearch-py>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["fs_indexer"]
